testdata/baselines/reference/submodule/conformance/jsDeclarationsExportFormsErr.errors.txt
globalNs.js(2,1): error TS1315: Global module exports may only appear in declaration files.


==== cls.js (0 errors) ====
    export class Foo {}
    
==== bar.js (0 errors) ====
    import ns = require("./cls");
    export = ns; // TS Only
    
==== bin.js (0 errors) ====
    import * as ns from "./cls";
    module.exports = ns; // We refuse to bind cjs module exports assignments in the same file we find an import in
    
==== globalNs.js (1 errors) ====
    export * from "./cls";
    export as namespace GLO; // TS Only
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1315: Global module exports may only appear in declaration files.
    
==== includeAll.js (0 errors) ====
    import "./bar";
    import "./bin";
    import "./globalNs";
    